# hurriname

./: .travis.yml  Cargo.toml  LICENSE.md  README.md  appveyor.yml  init.sh
.github/workflows/: ci.yml
ci/: before_deploy.sh
src/: config.rs  female_names.in  main.rs  male_names.in
